flux/apps/arr/vpn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn
  namespace: default
spec:
  selector:
    matchLabels:
      app: vpn
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vpn
    spec:
      # Config from here
      # https://github.com/qdm12/gluetun-wiki/pull/119
      containers:
        - name: qbt
          image: lscr.io/linuxserver/qbittorrent:5.2.3
          resources:
            requests:
              cpu: 159m
              memory: 331Mi
            limits:
              memory: 331Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: qbt-config
              mountPath: /config
            - name: qbt-downloads
              mountPath: /downloads
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.5.2
          resources:
            requests:
              cpu: 245m
              memory: 219Mi
            limits:
              memory: 219Mi
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
        - name: ll
          image: lscr.io/linuxserver/lazylibrarian:468e62a0-ls175
          resources:
            requests:
              cpu: 10m
              memory: 121Mi
            limits:
              memory: 121Mi
          ports:
            - containerPort: 5299
          volumeMounts:
            - name: ll-config
              mountPath: /config
            - name: media-books
              mountPath: /books
            - name: media-audiobooks
              mountPath: /audiobooks
      volumes:
        - name: qbt-config
          nfs:
            server: datasphere
            path: /Root/Volumes/qbt/config
        - name: qbt-downloads
          nfs:
            server: datasphere
            path: /Root/Volumes/qbt/downloads
        - name: prowlarr-config
          nfs:
            server: datasphere
            path: /Root/Volumes/prowlarr
        - name: ll-config
          nfs:
            server: datasphere
            path: /Root/Volumes/ll
        - name: media-books
          nfs:
            server: datasphere
            path: /Root/Media/Books
        - name: media-audiobooks
          nfs:
            server: datasphere
            path: /Root/Media/Audiobooks
