flux/apps/arr/vpn/flaresolverr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: default
spec:
  selector:
    app: vpn
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8191
