flux/apps/arr/vpn/ll-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ll
  namespace: default
spec:
  selector:
    app: vpn
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5299
