flux/apps/arr/vpn/prowlarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: default
spec:
  selector:
    app: vpn
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9696
