flux/apps/arr/vpn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbt
  namespace: default
spec:
  selector:
    app: qbt
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
