flux/apps/arr/vpn/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbt
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`qbt.home`)
      kind: Rule
      services:
        - name: qbt
          port: 80
    - match: Host(`qbt.arlodev.co.uk`)
      kind: Rule
      services:
        - name: qbt
          port: 80
