flux/apps/arr/vpn/ll-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ll
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ll.home`)
      kind: Rule
      services:
        - name: ll
          port: 80
    - match: Host(`ll.arlodev.co.uk`)
      kind: Rule
      services:
        - name: ll
          port: 80
