flux/apps/arr/vpn/prowlarr-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prowlarr.home`)
      kind: Rule
      services:
        - name: prowlarr
          port: 80
    - match: Host(`prowlarr.arlodev.co.uk`)
      kind: Rule
      services:
        - name: prowlarr
          port: 80
