flux/apps/arr/vpn/qbt-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbt-local
  namespace: default
spec:
  entryPoints:
    - local
  routes:
    - match: Host(`qbt.home`)
      kind: Rule
      services:
        - name: qbt
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbt-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`qbt.arlodev.co.uk`)
      kind: Rule
      services:
        - name: qbt
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbt-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbt.arlodev.co.uk`)
      kind: Rule
      services:
        - name: qbt
          port: 80
  tls:
    secretName: cert-qbt
